--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "dependencies": {
     "@types/dat.gui": "^0.7.13",
     "dat.gui": "^0.7.9",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "three": "^0.157.0"
   },
   "devDependencies": {
+    "@types/react": "^19.1.15",
+    "@types/react-dom": "^19.1.9",
     "@types/three": "^0.157.0",
+    "@vitejs/plugin-react": "^5.0.4",
     "typescript": "^5.0.0",
     "vite": "^4.5.0"
   }
